# MeLi_ads

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_data_tutorial.ipynb  02_data_exploration_r.ipynb
src/meli_ads/: __init__.py
src/meli_ads/data/: __init__.py  dataset.py  make_dataset.py  transforms.py
